fix 100vh on ios safari

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -65,3 +65,7 @@ code {
 .border-box {
   box-sizing: border-box;
 }
+
+.app {
+  -webkit-overflow-scrolling: touch;
+}
